# tiny-libc

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  main.c
.cargo/: config.toml
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/tiny-libc/: Cargo.toml  build.rs
crates/tiny-libc-build/: Cargo.toml  build.rs
crates/tiny-libc-build/src/: lib.rs
crates/tiny-libc-macros/: Cargo.toml
crates/tiny-libc-macros/src/: lib.rs
crates/tiny-libc/src/: allocator.rs  io.rs  lib.rs  linux.rs  process.rs  syscalls.rs
libc/: CMakeLists.txt
libc/arch/: x86_64-linux.c
libc/include/: assert.h  ctype.h  errno.h  fenv.h  float.h  inttypes.h  limits.h  malloc.h  math.h  pthread.h  setjmp.h  stdarg.h  stdatomic.h  stdbool.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
libc/src/: arch.h  assert.c  crt.c  ctype.c  entrypoint.c  errno.c  fenv.c  localtime.c  printf.c  printf.h  stdio.c  stdlib.c  string.c  strtod.c  time.c  unistd.c  walloc.c
libc/src/math/: __math_divzero.c  __math_xflow.c  __rem_pio2.c  __rem_pio2_large.c  asin.c  asinh.c  atan.c  atanh.c  ceil.c  cos.c  cosh.c  exp.c  exp_data.c  exp_data.h  expm1.c  floor.c  libm.h  log.c  log1p.c  log2.c  log2_data.c  log2_data.h  log_data.c  log_data.h  lrint.c  modf.c  pow.c  pow_data.c  pow_data.h  round.c  scalbn.c  sin.c  sqrt.c  sqrt_data.h  tan.c  tanh.c  trunc.c
libc/src/pthread/: cond.c  futex.h  mutex.c  once.c
upstream/: CMakeLists.txt
