CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(quickjs-standalone VERSION 0.1 LANGUAGES C)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "MinSizeRel")
ENDIF()

IF(CMAKE_BUILD_TYPE STREQUAL Release OR CMAKE_BUILD_TYPE STREQUAL MinSizeRel)
    STRING(APPEND CMAKE_C_FLAGS " -flto=auto")
ENDIF()

ADD_SUBDIRECTORY(libc)
ADD_SUBDIRECTORY(upstream)

ADD_EXECUTABLE(demo main.c)
TARGET_LINK_LIBRARIES(demo tiny-libc quickjs)

ADD_EXECUTABLE(demo-ng main.c)
TARGET_LINK_LIBRARIES(demo-ng tiny-libc quickjs-ng)
