[package]
name = "tiny-libc"
version = "0.1.0"
edition = "2021"

[dependencies]
linux-syscall = { version = "1.1.0", optional = true }
linux-errno = { version = "1.0.1", optional = true }
tiny-libc-macros.workspace = true

[build-dependencies]
cc = "1.2.20"
glob = "0.3.1"
tiny-libc-build.workspace = true

[features]
default = ["linux", "alloc"]
linux = ["dep:linux-syscall", "dep:linux-errno"]
alloc = []
